# vaalikoppi

./: .dockerignore  .env.template  .eslintrc  .gitignore  .prettierignore  .prettierrc.cjs  Cargo.toml  Dockerfile  LICENSE  README.md  Vagrantfile  biome.json  bootstrap.sh  bun.lockb  conftest.py  db.sqlite3  dev.Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  justfile  manage.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.cjs  wordlist.txt
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.sqlx/: query-009e516b0bd50a4995dac95d8c39414f26ab0c1c75636b955aeb4d08948f2f32.json  query-026bfe5fadf16904f50b937b6add50c83acf4dfba3e0e0267c5b17965f702683.json  query-055b6e73439dd9a80eb14be3ad856cbbed458ec92d1bd7c6e16c2fae97996f81.json  query-063dd0524548533f48c9611985132cb54323d9f22403785005cc3ce67edd52a0.json  query-0f7d3e6a940030d68a5fdc74869f9c47968335d4068416f042710a4e5b00ab59.json  query-12e077e544dc25cda514ab019ea4338b76d2515dc3a1a10c6afe55a93927059b.json  query-3f5d983f9493a65bd997e86e1023cbba87b653d2f38078cb64da502a76630c4c.json  query-4b3752f1f241cd17385c7408553ad40a8bcbae6f174cec1cf90412825c182e52.json  query-548947a72dd4e6448b97fc6ddfabe6e90b9d1d0ff4d254a7421f6fed300feb94.json  query-5e8d2466e105a032ac17d6f9acb925b7f2b4d49a41fab960e324e195ae2ce92d.json  query-610913058444c45aee5f56be7b6bdedddb58221902548d2b046b2466f85369b5.json  query-760f8046219cb51c46d311e2437d516c7784820a35c7e85cac6a210bfdbd9aa2.json  query-7f1172b37c22d29604940d6527e69f5bbfad4cbbc94a509242f642a0bfd42f1a.json  query-8c444ae65a827053aacdc3c51fed02eea1b02db45a167905bcd4cdfffa44fe2e.json  query-8d64a63a5f26e0218d5ec710457fbed609a7d6ed562bfe3b72dca77b2884c70d.json  query-9c65f875b7885cb6d88e448f2240d5299951975512309334bfdd7fda0c9c64ff.json  query-9f03712f801c931495c7aeebeec8fbe6b9e63b32886a4c99b96c1b546b8b2e84.json  query-a33d7f94f8cf34ce5ad279a7caf5ac5ee7c8aed30177c432bb4a68a67e2fa06e.json  query-c78072e0a7cec0a42d0831d300b1726990077c599eaa7824397fa8212d116bbc.json  query-e78ee3339c22204959738628f370783a46a201a267cc56d2bf1ae6210d600bdf.json  query-f76a3b41c5552a525c5960f29ee296fa265db9535ce58c11fb037e8757fad539.json
auth2/: README.md  admin.py  forms.py  models.py
e2e/: fixtures.ts  types.ts  utils.ts
election/: asgi.py  index.html  login.html  middleware.py  sentry.py  settings.py  urls.py  views.py  wsgi.py
(+191 files in other folders)
