[package]
name = "vaalikoppi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.29", features = []}
postgres = "0.19.7"
sqlx = "0.7.1"
tokio = { version = "1.32.0", features = ["macros", "io-util", "rt-multi-thread"]}
validator = { version = "0.16.1", features = ["derive"]}
